2010-01-08  Daniel Macks  <dmacks@netspace.org>

	* dpkg-base-files.info.in: only bother to check in places where
	.la are likely to exist (avoid wasting time in share/, don't mess
	with %b or %i of other pkgs)

2010-01-03  Daniel Macks  <dmacks@netspace.org>

	* dpkg-base-files.info.in, postinst.in: activate the real .la
	cleaning code

2010-01-03  Daniel Macks  <dmacks@netspace.org>

	* inject.pl, install.sh, setup.sh: update copyright

2009-12-28  Daniel Macks  <dmacks@netspace.org>

	* preinst.in, postinst.in, prerm.in, postrm.in: sanity-check deb
	script before running it

2009-12-28  Daniel Macks  <dmacks@netspace.org>

	* dpkg-base-files.info.in, preinst.in, postinst.in, prerm.in,
	postrm.in: dpkg now passes %n as $FINK_PACKAGE_NAME instead of via
	CLI parameter

2009-12-21  Daniel Macks  <dmacks@netspace.org>

	* postinst.in: fixed file-tests (thanks pogma)

2009-12-21  Daniel Macks  <dmacks@netspace.org>

	* dpkg-base-files.info.in, postinst.in: dry-run of .la cleaning

2009-12-19  Daniel Macks  <dmacks@netspace.org>

	* postinst.in: figure out the being-installed list of .la

2009-12-19  Daniel Macks  <dmacks@netspace.org>

	* dpkg-base-files.info.in, preinst.in, postinst.in, prerm.in,
	postrm.in: dpkg now passes %n as first CLI parameter

2009-12-19  Daniel Macks  <dmacks@netspace.org>

	* dpkg-base-files.info.in, postinst.in: debugging output to see
	how we are called
	* preinst.in, postinst.in, prerm.in, postrm.in: link Debian docs
	for parameters

2009-12-18  Daniel Macks  <dmacks@netspace.org>

	* dpkg-base-files.info.in: require dpkg that will use the scripts

2009-12-17  Daniel Macks  <dmacks@netspace.org>

	* ChangeLog.base-files: import ChangeLog from "dpkg-wrappers"
	branch of base-files module
	* inject.pl, install.sh: ...and install it along side ChangeLog

2009-12-17  Daniel Macks  <dmacks@netspace.org>

	* .cvsignore: clean out old-module stuff

2009-12-17  Daniel Macks  <dmacks@netspace.org>
