@@ -11,8 +11,14 @@ InstallScript: ./install.sh %i
 PostInstScript: <<
 	if [ "$1" = "configure" ]; then
 		echo "Cleaning up all installed .la files (this may take a moment)"
-		echo '  find "%p/lib" "%p/opt" "%p/Applications" "%p/Library" -name '"'"'*.la'"'"' -and -type f -print0 | xargs -0 perl -pi -e "s/^(dependency_libs)=.*/\1='"''"'/" || true'
-		find "%p/lib" "%p/opt" "%p/Applications" "%p/Library" -name '*.la' -and -type f -print0 | xargs -0 perl -pi -e "s/^(dependency_libs)=.*/\1=''/" || true
+		for libdir in "%p/lib" "%p/opt" "%p/Applications" "%p/Library"; do
+			if [ -d "$libdir" ]; then
+				echo '  find "'$libdir'" -name '"'"'*.la'"'"' -and -type f -print0 | xargs -0 perl -pi -e "s/^(dependency_libs)=.*/\1='"''"'/" || true'
+				find "$libdir" -name '*.la' -and -type f -print0 | xargs -0 perl -pi -e "s/^(dependency_libs)=.*/\1=''/" || true
+			else
+				echo '  skipping "'$libdir'" (nothing installed there)'
+			fi
+		done
 	fi
 <<
 #
